# trading-bot

./: .env.example  .gitignore  Cargo.toml  README.md
crates/auth/: Cargo.toml
crates/auth/src/: credentials.rs  error.rs  lib.rs  signer.rs
crates/binance-rest/: Cargo.toml
crates/binance-rest/src/: client.rs  error.rs  lib.rs  responses.rs
crates/common/: Cargo.toml
crates/common/src/: backoff.rs  environment.rs  lib.rs
crates/connector-binance/: Cargo.toml
crates/connector-binance/src/: client.rs  depth_manager.rs  lib.rs  parser.rs  user_data_parser.rs  user_data_stream.rs
crates/connector-core/: Cargo.toml
crates/connector-core/src/: lib.rs
crates/execution-core/: Cargo.toml
crates/execution-core/src/: correlation.rs  execution.rs  lib.rs  order.rs  position.rs
crates/metrics/: Cargo.toml
crates/metrics/src/: lib.rs
crates/model/: Cargo.toml
crates/model/src/: lib.rs
crates/orderbook/: Cargo.toml
crates/orderbook/src/: book.rs  error.rs  level.rs  lib.rs
crates/rest-client/: Cargo.toml
crates/rest-client/src/: client.rs  error.rs  lib.rs
crates/runner/: Cargo.toml
crates/runner/src/: main.rs
crates/strategy-core/: Cargo.toml
crates/strategy-core/src/: context.rs  error.rs  lib.rs  signal.rs  strategy.rs
crates/strategy-runner/: Cargo.toml
crates/strategy-runner/src/: dry_run.rs  error.rs  lib.rs  risk_config.rs  risk_manager.rs  runner.rs  signal_processor.rs  timer.rs
crates/strategy-runner/src/examples/: mod.rs  price_threshold.rs
