[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = []
license = "MIT"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "sync", "time", "signal"] }

# WebSocket
tokio-tungstenite = { version = "0.21", features = ["rustls-tls-native-roots"] }
futures-util = { version = "0.3", default-features = false, features = ["sink"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Financial precision
rust_decimal = { version = "1.34", features = ["serde-with-str"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Internal crates
model = { path = "crates/model" }
connector-core = { path = "crates/connector-core" }
connector-binance = { path = "crates/connector-binance" }
common = { path = "crates/common" }
metrics = { path = "crates/metrics" }
