[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = []
license = "MIT"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "sync", "time", "signal"] }

# WebSocket
tokio-tungstenite = { version = "0.21", features = ["rustls-tls-native-roots"] }
futures-util = { version = "0.3", default-features = false, features = ["sink"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Financial precision
rust_decimal = { version = "1.34", features = ["serde-with-str"] }
rust_decimal_macros = "1.34"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Cryptography
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"

# Secure secrets
secrecy = { version = "0.10", features = ["serde"] }
zeroize = { version = "1.8", features = ["derive"] }

# Environment config
dotenvy = "0.15"

# HTTP client
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }

# Concurrent data structures
dashmap = "6.0"
parking_lot = "0.12"

# UUID generation
uuid = { version = "1.0", features = ["v4"] }

# URL encoding
urlencoding = "2.1"

# Async traits
async-trait = "0.1"

# Ordered floats for BTreeMap keys
ordered-float = "4.2"

# Internal crates
model = { path = "crates/model" }
connector-core = { path = "crates/connector-core" }
connector-binance = { path = "crates/connector-binance" }
common = { path = "crates/common" }
metrics = { path = "crates/metrics" }
auth = { path = "crates/auth" }
rest-client = { path = "crates/rest-client" }
binance-rest = { path = "crates/binance-rest" }
execution-core = { path = "crates/execution-core" }
orderbook = { path = "crates/orderbook" }
strategy-core = { path = "crates/strategy-core" }
strategy-runner = { path = "crates/strategy-runner" }
