[package]
name = "auth"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
hmac = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
secrecy = { workspace = true }
zeroize = { workspace = true }
dotenvy = { workspace = true }
thiserror = { workspace = true }
urlencoding = { workspace = true }
