[package]
name = "binance-rest"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
auth = { workspace = true }
common = { workspace = true }
rest-client = { workspace = true }
execution-core = { workspace = true }
rust_decimal = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
