[package]
name = "connector-binance"
version.workspace = true
edition.workspace = true

[dependencies]
model = { workspace = true }
connector-core = { workspace = true }
common = { workspace = true }
metrics = { workspace = true }
execution-core = { workspace = true }
binance-rest = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rust_decimal = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
