[package]
name = "execution-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
rust_decimal = { workspace = true }
rust_decimal_macros = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
dashmap = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
