[package]
name = "strategy-runner"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = { workspace = true }
chrono = { workspace = true }
parking_lot = { workspace = true }
rust_decimal = { workspace = true }
rust_decimal_macros = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

# Internal crates
binance-rest = { workspace = true }
connector-core = { workspace = true }
execution-core = { workspace = true }
model = { workspace = true }
strategy-core = { workspace = true }

[dev-dependencies]
rust_decimal_macros = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "time"] }
